# guess-the-eval

./: .eslintrc.js  README.md  about.md  chessground.css  index.html  main.1ce2d6cef9f9534a2f1d.js  main.34d51fee7bc906a67b1e.js  main.45bb601baf8808b492cc.js  main.45bb601baf8808b492cc.js.LICENSE.txt  main.66e05f117da83ec89dfb.js  main.7d23842700596a279568.js.LICENSE.txt  main.979eaa74fc47150d8081.js  main.9f0b4143e1c19e54c442.js  main.f3f7e9ba62ef815fbc1a.js.LICENSE.txt  main.f4896f77aeacf4f8dbc9.js  package-lock.json  package.json  stockfish.js  stockfish.js.LICENSE.txt  thirdPartyLicenses.md  tsconfig.json  wchcand22.pgn  webpack.config.js
.github/workflows/: deploy.yml  test.yml
evaluator/: .gitignore  Cargo.toml  README.md  questions.json
evaluator/src/: main.rs  question.rs  stockfish.rs  visitor.rs
semantic/: README.md  package.json
semantic/site/globals/: site.overrides  site.variables
semantic/themes/default/globals/: site.variables
src/: App.tsx  PointsSolver.ts  calculatePoints.ts  chessground.css  chessground.tsx  index.html  index.js  index.tsx  questions.ts  server.go  stockfish.ts  store.ts  theme.css
src/components/: .eslintrc.js  App.tsx  BoardAndBar.tsx  Chessground.tsx  ErrorBoundary.tsx  EvalBar.tsx  EvalSlider.tsx  EvalSliderMobile.tsx  Footer.tsx  Game.tsx  GameInterface.tsx  Inputs.tsx  LastResult.tsx  Layout.tsx  RightSide.tsx  RightWindow.tsx  StockfishOutput.tsx  Summary.tsx  chessground.tsx
webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
