[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
anyhow = { version = "1.0", features = ["backtrace"]}
vampirc-uci = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
shakmaty = "0.20"
clap = { version = "3.0", features = ["derive"] }
pgn-reader = "0.19"