[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"
license = "GPL"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
anyhow = { version = "1.0", features = ["backtrace"]}
vampirc-uci = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
shakmaty = "0.20"
clap = { version = "3.0", features = ["derive"] }
pgn-reader = "0.19"
rand = { version = "0.8", features = ["small_rng"] }
log = "0.4"
env_logger = "0.9"